--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,55 +19,75 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-
-    <style>
-      .computer-choice {
-        user-select: none; /* supported by Chrome and Opera */
-        -webkit-user-select: none; /* Safari */
-        -khtml-user-select: none; /* Konqueror HTML */
-        -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-      }
-
-      .disable-cursor:not(:disabled) {
-        cursor: not-allowed;
-      }
-
-      .red-hat {
-        font-family: "Red Hat Mono";
-      }
-    </style>
   </head>
   <body>
     <div class="container-lg text-center">
       <h1 class="display-3 mt-md-5 mt-3 mb-4 red-hat">Choose your weapon</h1>
       <div class="row display-1 justify-content-center my-md-5">
         <div class="col-md-3">
-          <button class="border-0 rounded bg-transparent mb-3">🪨</button>
+          <button
+            class="border-0 rounded bg-transparent mb-3 selectionBtn"
+            data-selection="rock"
+          >
+            🪨
+          </button>
         </div>
         <div class="col-md-3">
-          <button class="border-0 rounded bg-transparent mb-3">📃</button>
+          <button
+            class="border-0 rounded bg-transparent mb-3 selectionBtn"
+            data-selection="paper"
+          >
+            📃
+          </button>
         </div>
         <div class="col-md-3">
-          <button class="border-0 rounded bg-transparent">✂️</button>
+          <button
+            class="border-0 rounded bg-transparent selectionBtn"
+            data-selection="scissors"
+          >
+            ✂️
+          </button>
         </div>
       </div>
 
-      <div class="computer-choice mb-5">
+      <div class="disable-user-select mb-5">
         <h1 class="display-3 my-4 red-hat">Computer Chose</h1>
         <div class="row display-1 justify-content-center my-md-5">
           <div class="col-md-3">
-            <button class="border-0 rounded bg-transparent mb-3 disable-cursor">
+            <button
+              class="
+                border-0
+                rounded
+                bg-transparent
+                mb-3
+                disable-cursor
+                computerBtn
+              "
+              data-selection="rock"
+            >
               🪨
             </button>
           </div>
           <div class="col-md-3">
-            <button class="border-0 rounded bg-transparent mb-3 disable-cursor">
+            <button
+              class="
+                border-0
+                rounded
+                bg-transparent
+                mb-3
+                disable-cursor
+                computerBtn
+              "
+              data-selection="paper"
+            >
               📃
             </button>
           </div>
           <div class="col-md-3">
-            <button class="border-0 rounded bg-transparent disable-cursor">
+            <button
+              class="border-0 rounded bg-transparent disable-cursor computerBtn"
+              data-selection="scissors"
+            >
               ✂️
             </button>
           </div>
@@ -99,5 +120,7 @@
         Play Again
       </button>
     </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
