Added classes to increase margin and padding in victory message

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
     </div>
 
     <div class="container-lg text-center">
-      <h1 class="display-5 red-hat mt-5 pt-md-5 d-none">
+      <h1 class="display-5 red-hat my-5 py-md-5 d-none" id="computerVictory">
         😢 Sorry, The Computer Won
       </h1>
-      <h1 class="display-5 red-hat mt-5 pt-md-5 d-none">
+      <h1 class="display-5 red-hat my-5 py-md-5 d-none" id="playerVictory">
         🎉 Congratulations, You Won
       </h1>
       <button
